# libcppffi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  cppffi.h  cppffi.impl.h  test.cpp
include/cppffi/: cppffi.h  cppffi_begin.h  cppffi_config.h  cppffi_end.h  cppffi_impl.h  cppffi_support.h
include/cppffi/types/: builtin.h  structs.h
tests/: CMakeLists.txt  test.cpp
